<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_lay"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_taxi">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/i"
            tools:ignore="ContentDescription"
            tools:scaleX="2"
            tools:scaleY="2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_login_reg">

        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_above="@+id/editTextPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:drawableStart="@drawable/_12"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/e_mail_txt"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#000000"
                android:textColorHint="#686868" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_above="@+id/textViewForgotPass"
                android:layout_marginBottom="15dp"
                android:background="#FFFFFF"
                android:drawableStart="@drawable/password_png"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/password_txt"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#000000"
                android:textColorHint="#686868" />

            <TextView
                android:id="@+id/textViewForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttonSignIn"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/forgot_password_txt"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_above="@+id/textViewCreateAcc"
                android:layout_marginBottom="100dp"
                android:background="@color/blue_int"
                android:text="@string/sign_in_txt"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCreateAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/create_a_new_account_txt"
                android:textColor="@color/gray" />
        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

